Day-2-Terraform/Network/my-igw.tf
resource "aws_internet_gateway" "my-igw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = "my-internetgateway-2"
  }
}
